--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   },
   "homepage": "https://github.com/brian-landler/stacklink#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "slug": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.1",
+    "@types/slug": "^5.0.9",
     "mongoose": "^8.14.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
