--- a/backend/package.json
+++ b/backend/package.json
@@ -21,11 +21,13 @@
   "homepage": "https://github.com/brian-landler/stacklink#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "slug": "^10.0.0"
   },
