Added cloudinary and formidable to upload images, created api to upload images, updated User model to accept images

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,12 +29,14 @@
     "express-validator": "^7.2.1",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
-    "slug": "^10.0.0"
+    "slug": "^10.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/slug": "^5.0.9",
     "mongoose": "^8.14.0",
