--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-router-dom": "^7.5.3",
+    "react-spinners": "^0.17.0",
     "sonner": "^2.0.3"
   },
   "devDependencies": {
